--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/router-store": "16.2.0",
     "@ngrx/store": "^16.2.0",
     "@ngrx/store-devtools": "16.2.0",
+    "jwt-decode": "^3.1.2",
     "ngrx-store-logger": "0.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
